<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
   <item android:title="Options">
       <menu>
           <group android:checkableBehavior="single">

               <item
                   android:id="@+id/nav_converter"
                   android:icon="@drawable/currency_exchange"
                   android:title="@string/converter" />

               <item
                   android:id="@+id/nav_photo"
                   android:icon="@drawable/photo_camera"
                   android:title="@string/exchange_from_photo" />

               <item
                   android:id="@+id/nav_history"
                   android:icon="@drawable/history"
                   android:title="@string/historial" />
           </group>
       </menu>
   </item>
</menu>